setup default inventory, limit inventory height to avoid overflow

--- a/control-panel.css
+++ b/control-panel.css
@@ -35,6 +35,11 @@
     min-height: 20px;
 }
 
+#inventory {
+    max-height: 340px;
+    overflow: scroll;
+}
+
 .panel-item {
     margin: 5px 5px;
     padding: 5px 20px;
